--- a/index.html
+++ b/index.html
@@ -36,5 +36,21 @@
             </div>
         </header>
     </main>
+    <footer class="footer">
+        <div class="con">
+            <div class="row">
+                <div class="footer-col">
+                    <h4>Resources</h4>
+                    <ul>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Developers</a></li>
+                        <li><a href="#">Support</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+
+    </footer>
 </body>
 </html>
