--- a/index.html
+++ b/index.html
@@ -1,40 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" sizes="32x32" type="jpg/png" href="./images/294740242_1439860833093792_1517359531686116914_n.jpg">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      sizes="32x32"
+      type="jpg/png"
+      href="./images/294740242_1439860833093792_1517359531686116914_n.jpg"
+    />
     <title>CapacityBay Final CSS Project</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <main>
-        <header>
-            <div class="navigation">
-                <div class="logo">
-                    <a href="./index.html">
-                        <img src="./images/logo.svg" alt="logo">
-                    </a>
-                </div>
-                <nav>
-                    <ul>
-                        <li><a href="">Features</a></li>
-                        <li><a href="">Pricing</a></li>
-                        <li><a href="">Resources</a></li>
-                    </ul>
-                </nav>
+      <header>
+        <div class="navigation">
+          <div class="logo">
+            <a href="./index.html">
+              <img src="./images/logo.svg" alt="logo" />
+            </a>
+          </div>
+          <nav>
+            <ul>
+              <li><a href="">Features</a></li>
+              <li><a href="">Pricing</a></li>
+              <li><a href="">Resources</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="header-toggles">
+          <div class="login">Login</div>
+          <div class="sign-up">Sign Up</div>
+        </div>
+        <div class="hamburger">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </header>
+
+        <!-- This section is being worked on by Doumo Ngumezi and Imo Peter -->
+      <section>
+        <div class="content">
+            <h1 class="More">More than just shorter links</h1>
+            <p class="build">Build your brand's recognition and get detailed insights on how
+                your links are performing.
+            </p>
+            <div class="get-started">Get started</div>
+        </div>
+        <div class="illus">
+            <img src="images/illustration-working.svg" alt="illustration-working">
+        </div>
+      </section>
+      <!--End of section by Doumo Ngumezi and Imo-->      
+
+      <!-- James, Ebere and Steve inputs. The link section -->
+      <section>
+        <div class="link-section">
+          <div class="links-section-bg">
+            <input
+              type="text"
+              name=""
+              id=""
+              placeholder="shorten a link here..."
+            />
+            <p class="p-link2">Please add a link</p>
+            <button class="shorten-it">Shorten it!</button>
+          </div>
+          <p class="p-link">Please add a link</p>
+        </div>
+        <div class="links">
+          <div class="link">
+            <p class="link-p">https://www.frontendmentor.io</p>
+            <hr size="1" color="white" width="170%" />
+            <div class="link-but">
+              <p class="link-p">https://reLink/k4lKyk</p>
+              <div class="link-copi">Copy</div>
             </div>
-            <div class="header-toggles">
-                <div class="login">Login</div>
-                <div class="sign-up">Sign Up</div>
+          </div>
+          <div class="link">
+            <p class="link-p">https://twitter.com/frontendmentor</p>
+            <hr size="1" color="white" width="150%" />
+            <div class="link-but">
+              <p class="link-p">https://reLink/gxOXp9</p>
+              <div class="link-copied">Copied!</div>
             </div>
-            <div class="hamburger">
-                <div></div>
-                <div></div>
-                <div></div>
+          </div>
+          <div class="link">
+            <p class="link-p">
+              https://www.linkedin,com/company/frontend-mentor
+            </p>
+            <hr size="1" color="white" width="100%" />
+            <div class="link-but">
+              <p class="link-p">https://reLink/gob3x9</p>
+              <div class="link-copy">Copy</div>
             </div>
-        </header>
+          </div>
+        </div>
+      </section>
     </main>
-</body>
+  </body>
 </html>
