--- a/index.html
+++ b/index.html
@@ -42,61 +42,58 @@
       </header>
 
         <!-- This section is being worked on by Doumo Ngumezi and Imo Peter -->
-      <section>
-        <div class="content">
-            <h1 class="More">More than just shorter links</h1>
-            <p class="build">Build your brand's recognition and get detailed insights on how
-                your links are performing.
-            </p>
-            <div class="get-started">Get started</div>
-        </div>
-        <div class="illus">
-            <img src="images/illustration-working.svg" alt="illustration-working">
-        </div>
-      </section>
+        <div class="intro-sect">
+          <div class="container">
+              <div class="content">
+                  <h1 class="More">More than just shorter links</h1>
+                  <p class="build">Build your brand's recognition and get detailed insights on how
+                      your links are performing.
+                  </p>
+                  <div class="get-started">Get started</div>
+              </div>
+              <div class="illus">
+                  <img src="images/illustration-working.svg" alt="illustration-working">
+              </div>
+          </div>
+      </div>
       <!--End of section by Doumo Ngumezi and Imo-->      
 
       <!-- James, Ebere and Steve inputs. The link section -->
-      <section>
+      <section class="linkss">
         <div class="link-section">
-          <div class="links-section-bg">
-            <input
-              type="text"
-              name=""
-              id=""
-              placeholder="shorten a link here..."
-            />
-            <p class="p-link2">Please add a link</p>
-            <button class="shorten-it">Shorten it!</button>
-          </div>
-          <p class="p-link">Please add a link</p>
+            <div class="links-section-bg">
+                <input type="text" name="" id="" placeholder="shorten a link here...">
+                <p class="p-link2">Please add a link</p> 
+                <button class="shorten-it">Shorten it!</button>
+            </div>
+            <p class="p-link">Please add a link</p>
         </div>
         <div class="links">
-          <div class="link">
-            <p class="link-p">https://www.frontendmentor.io</p>
-            <hr size="1" color="white" width="170%" />
-            <div class="link-but">
-              <p class="link-p">https://reLink/k4lKyk</p>
-              <div class="link-copi">Copy</div>
+            <div class="link">
+                <p class="link-p">https://www.frontendmentor.io</p>
+                <hr size="1" color="white" width="170%">
+                <div class="link-but">
+                    <p class="link-p">https://reLink/k4lKyk</p>
+                    <div class="link-copi">Copy</div>
+                </div>
             </div>
-          </div>
-          <div class="link">
-            <p class="link-p">https://twitter.com/frontendmentor</p>
-            <hr size="1" color="white" width="150%" />
-            <div class="link-but">
-              <p class="link-p">https://reLink/gxOXp9</p>
-              <div class="link-copied">Copied!</div>
+            <div class="link">
+                <p class="link-p">https://twitter.com/frontendmentor</p>
+                <hr size="1" color="white" width="150%">
+                <div class="link-but">
+                    <p class="link-p">https://reLink/gxOXp9</p>
+                    <div class="link-copied">Copied!</div>
+                </div>
             </div>
-          </div>
-          <div class="link">
-            <p class="link-p">
-              https://www.linkedin,com/company/frontend-mentor
-            </p>
-            <hr size="1" color="white" width="100%" />
-            <div class="link-but">
-              <p class="link-p">https://reLink/gob3x9</p>
-              <div class="link-copy">Copy</div>
+            <div class="link">
+                <p class="link-p">https://www.linkedin,com/company/frontend-mentor</p>
+                <hr size="1" color="white" width="100%">
+                <div class="link-but">
+                    <p class="link-p">https://reLink/gob3x9</p>
+                    <div class="link-copy">Copy</div>
+                </div>
             </div>
+        </div>
       </section>
     </main>
 </body>
